Fix author about on mobile

--- a/frontend/src/styles/Accordion.module.css
+++ b/frontend/src/styles/Accordion.module.css
@@ -211,10 +211,6 @@ svg {
         font-family: var(--ff-narkis-yair);
         line-height: 1.1;
         display: none;
-
-        .isOpen & {
-          display: unset;  
-        }
       }
     }
   }
@@ -311,6 +307,12 @@ svg {
         .active & {
           position: relative;
           color: white;
+        }
+
+        & h3 {
+          .isOpen & {
+            display: unset;
+          }
         }
       }
     }
